functioning with plurk api

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 	<div id="wrapper">
-		<p>This is a test page.</p>
 		<p id="time"></p>
 		<a href="http://s890081tonyhsu.github.io" target="_blank">Gitub Page</a>
 		<div>
@@ -20,6 +19,7 @@
 			<p id="lastMsg">Last Message: <span></span></p>
 		</div>
 		<button id="connect">connect</button>
+		<div id="name"><span></span>，歡迎使用 plurkNotifier</div>
 	</div>
 </body>
 </html>
