Use local storage to store data.

--- a/popup.html
+++ b/popup.html
@@ -12,14 +12,20 @@
 	<div id="wrapper">
 		<p id="time"></p>
 		<a href="http://s890081tonyhsu.github.io" target="_blank">Gitub Page</a>
-		<div>
+		<div id="msg">
 			<label for="testMsg">Test Message:</label>
 			<input id="testMsg" type="text">
 			<input id="saveMsg" type="submit">
 			<p id="lastMsg">Last Message: <span></span></p>
 		</div>
 		<button id="connect">connect</button>
+		<div id="function">
+			<button id="friends">Get Friends List</button>
+		</div>
 		<div id="name"><span></span>，歡迎使用 plurkNotifier</div>
+		<div id="dataList">
+			<div id="friendList"></div>
+		</div>
 	</div>
 </body>
 </html>
